--- a/style.css
+++ b/style.css
@@ -86,6 +86,30 @@ footer {
   gap: 10px;
 }
 svg:hover {
-  color: #2e151b;
+  color: white;
   transform: scale(1.5);
+}
+/* Reusing code */
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadding {
+  animation: fade 2s;
+}
+
+.little-tag {
+  display: block;
+  position: absolute;
+  width: 50px;
+  height: 35px;
+  left: 0;
+  top: 0;
+  border-radius: 5px;
 }
